--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,14 @@
 {
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/__pycache__/**": true,
+        "**/.history/**": true,
+        ".vscode": true
+    },
+    "explorerExclude.backup": {}
 }
